crates/cockpitctl-render/tests/snapshots/budget_regression_tests__budget_exact_highlights_no_truncation.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **3**)

1. ❌ **lint**: `E001` at `src/a.rs:1` — Message for E001
2. ❌ **lint**: `E002` at `src/b.rs:2` — Message for E002
3. ⚠️ **lint**: `W001` at `src/c.rs:3` — Message for W001

### Annotations

1. ❌ **lint**: `E001` at `src/a.rs:1` — Message for E001
2. ❌ **lint**: `E002` at `src/b.rs:2` — Message for E002
3. ⚠️ **lint**: `W001` at `src/c.rs:3` — Message for W001

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
