crates/cockpitctl-render/tests/snapshots/budget_regression_tests__budget_highlights_over_max_shows_truncation.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **3**)

1. ❌ **lint**: `E001` at `src/a.rs:1` — Message for E001
2. ❌ **lint**: `E002` at `src/b.rs:2` — Message for E002
3. ⚠️ **lint**: `W001` at `src/c.rs:3` — Message for W001
4. ⚠️ **lint**: `W002` at `src/d.rs:4` — Message for W002
5. ℹ️ **lint**: `I001` at `src/e.rs:5` — Message for I001

### Annotations

1. ❌ **lint**: `E001` at `src/a.rs:1` — Message for E001
2. ❌ **lint**: `E002` at `src/b.rs:2` — Message for E002
3. ⚠️ **lint**: `W001` at `src/c.rs:3` — Message for W001

_Showing 3 of 5 annotations (capped by `max_annotations`)._

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
