crates/cockpitctl-render/tests/snapshots/budget_regression_tests__budget_zero_highlights_with_max_five.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ✅ pass | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Lint

- `lint`: ✅ pass · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
