crates/cockpitctl-render/tests/snapshots/budget_regression_tests__edge_all_sensors_skip.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `optional-a` | ⏭ skip | no | `artifacts/optional-a/report.json` · `artifacts/optional-a/comment.md` |
| `optional-b` | ⏭ skip | no | `artifacts/optional-b/report.json` · `artifacts/optional-b/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Optional

- `optional-a`: ⏭ skip · report `artifacts/optional-a/report.json` · comment `artifacts/optional-a/comment.md`
- `optional-b`: ⏭ skip · report `artifacts/optional-b/report.json` · comment `artifacts/optional-b/comment.md`

<!-- cockpit:end -->
