crates/cockpitctl-render/tests/snapshots/budget_regression_tests__edge_newlines_in_finding_message_flattened.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **5**)

1. ❌ **lint**: `NL-001` at `src/main.rs:10` — first line second line third line

### Annotations

1. ❌ **lint**: `NL-001` at `src/main.rs:10` — first line second line third line

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
