crates/cockpitctl-render/tests/snapshots/budget_regression_tests__edge_unicode_in_messages_preserved.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ⚠️ warn | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **5**)

1. ⚠️ **lint**: `UNI-001` at `src/i18n.rs:42` — Ошибка: неверный формат — 日本語テスト 🚀
2. ℹ️ **lint**: `UNI-002` at `src/emoji.rs:7` — Check passed ✅ with résumé and naïve café

### Annotations

1. ⚠️ **lint**: `UNI-001` at `src/i18n.rs:42` — Ошибка: неверный формат — 日本語テスト 🚀
2. ℹ️ **lint**: `UNI-002` at `src/emoji.rs:7` — Check passed ✅ with résumé and naïve café

### Lint

- `lint`: ⚠️ warn · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
