crates/cockpitctl-render/tests/snapshots/budget_regression_tests__highlights_sorted_severity_desc_blocking_first.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `blocking-sensor` | ❌ fail | yes | `artifacts/blocking-sensor/report.json` · `artifacts/blocking-sensor/comment.md` |
| `non-blocking` | ⚠️ warn | no | `artifacts/non-blocking/report.json` · `artifacts/non-blocking/comment.md` |

### Highlights

(showing up to **10**)

1. ℹ️ **blocking-sensor**: `I001` at `src/z.rs:99` — Message for I001
2. ❌ **non-blocking**: `E001` at `src/a.rs:1` — Message for E001
3. ❌ **blocking-sensor**: `E002` at `src/b.rs:2` — Message for E002
4. ⚠️ **non-blocking**: `W001` at `src/c.rs:3` — Message for W001

### Annotations

1. ❌ **blocking-sensor**: `E002` at `src/b.rs:2` — Message for E002
2. ❌ **non-blocking**: `E001` at `src/a.rs:1` — Message for E001
3. ⚠️ **non-blocking**: `W001` at `src/c.rs:3` — Message for W001
4. ℹ️ **blocking-sensor**: `I001` at `src/z.rs:99` — Message for I001

### A

- `blocking-sensor`: ❌ fail · report `artifacts/blocking-sensor/report.json` · comment `artifacts/blocking-sensor/comment.md`

### B

- `non-blocking`: ⚠️ warn · report `artifacts/non-blocking/report.json` · comment `artifacts/non-blocking/comment.md`

<!-- cockpit:end -->
