crates/cockpitctl-render/tests/snapshots/budget_regression_tests__markers_present_with_empty_content.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|

### Highlights

_No highlights._

### Annotations

_No annotations._

<!-- cockpit:end -->
