crates/cockpitctl-render/tests/snapshots/budget_regression_tests__summary_table_rows_deterministic_order.snap
---
source: crates/cockpitctl-render/tests/budget_regression_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `alpha` | ✅ pass | yes | `artifacts/alpha/report.json` · `artifacts/alpha/comment.md` |
| `bravo` | ✅ pass | yes | `artifacts/bravo/report.json` · `artifacts/bravo/comment.md` |
| `charlie` | ✅ pass | yes | `artifacts/charlie/report.json` · `artifacts/charlie/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### A

- `alpha`: ✅ pass · report `artifacts/alpha/report.json` · comment `artifacts/alpha/comment.md`

### B

- `bravo`: ✅ pass · report `artifacts/bravo/report.json` · comment `artifacts/bravo/comment.md`

### C

- `charlie`: ✅ pass · report `artifacts/charlie/report.json` · comment `artifacts/charlie/comment.md`

<!-- cockpit:end -->
